fix z-index & first section

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -56,6 +56,7 @@
     }
   }
   &__nav{
+    z-index: 99;
     box-shadow: 0 2px 10px -3px #808080;
     width: 100%;
     background-color: $blue;
@@ -185,6 +186,9 @@
     &__nav{
       padding: 0;
       height: 0;
+      &-fixed{
+        position: static;
+      }
       &-active{
         padding: 20px 0 5px 0;
         height: 315px;
